# Pepper

./: .clangd  .gitignore  .gitmodules  BUCK  CMakeLists.txt  README.md  app.c  compile.sh  compile_single.sh  one.sh  pch.h  pepper.c  pepper.h  ps_bst.h  ps_chronon.c  ps_chronon.h  ps_defines.h  ps_ecs.h  ps_engine.h  ps_events.c  ps_events.h  ps_heap.h  ps_keycodes.h  ps_logging.h  ps_math.h  ps_mergesort.h  ps_progress.h  ps_single.c  ps_single.h  ps_types.h  ps_vector.h  ps_window.c  ps_window.h  tests.c
.github/workflows/: main.yml
core/: CMakeLists.txt  ps_chronon.c  ps_chronon.h  ps_engine.h  ps_events.c  ps_events.h  ps_graphics.c  ps_graphics.h  ps_keycodes.h  ps_types.h  ps_window.c  ps_window.h
lib/: CMakeLists.txt  ps_bst.h  ps_heap.h  ps_logging.h  ps_math.h  ps_mergesort.h  ps_progress.h  ps_vector.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/miniaudio/: CMakeLists.txt  miniaudio.h
sandbox/: CMakeLists.txt  compile.sh  main.c
toolchains/: BUCK
